syntax = "proto3";
package node;

import "google/protobuf/empty.proto";

message VmConfig {
    string vmID = 1;
    int32 memory = 2;
    int32 vcpus = 3;
    string kernel = 4;
    string rootFs = 5;
    string kernel_params = 6;
    string network_mode = 7;
    string address = 8;
}

enum Status {
    SUCCESS = 0;
    FAILURE = 1;
}

message Response {
    Status status = 1;
}

message VmResponse {
    Status status = 1;
    VmConfig config = 2;
}

message VmList {
    repeated string vmID = 1;
}

message VmID {
    string vmID = 1;
}

service Node {
    rpc StartVM(VmConfig) returns (VmConfig) {}
    rpc StopVM(VmID) returns (Response) {}
    rpc ListVms(google.protobuf.Empty) returns (VmList) {}
    rpc HealthCheck(google.protobuf.Empty) returns (Response) {}
}